polychem/src/polymers/snapshots/polychem__polymers__polymer_database__tests__parse_residues_types_with_merged_groups.snap
---
source: polychem/src/polymers/polymer_database.rs
expression: residues.unwrap()
---
{
  "K": ResidueDescription(
    name: "Lysine",
    composition: ChemicalComposition(
      chemical_formula: [
        (Element(
          symbol: "C",
          name: "Carbon",
          mass_number: None,
          isotopes: {
            12: Isotope(
              relative_mass: "12.0000000",
              abundance: Some("0.9893"),
            ),
            13: Isotope(
              relative_mass: "13.00335483507",
              abundance: Some("0.0107"),
            ),
            14: Isotope(
              relative_mass: "14.0032419884",
              abundance: None,
            ),
          },
        ), 6),
        (Element(
          symbol: "H",
          name: "Hydrogen",
          mass_number: None,
          isotopes: {
            1: Isotope(
              relative_mass: "1.00782503223",
              abundance: Some("0.999885"),
            ),
            2: Isotope(
              relative_mass: "2.01410177812",
              abundance: Some("0.000115"),
            ),
            3: Isotope(
              relative_mass: "3.0160492779",
              abundance: None,
            ),
          },
        ), 14),
        (Element(
          symbol: "N",
          name: "Nitrogen",
          mass_number: None,
          isotopes: {
            14: Isotope(
              relative_mass: "14.00307400443",
              abundance: Some("0.99636"),
            ),
            15: Isotope(
              relative_mass: "15.00010889888",
              abundance: Some("0.00364"),
            ),
          },
        ), 2),
        (Element(
          symbol: "O",
          name: "Oxygen",
          mass_number: None,
          isotopes: {
            16: Isotope(
              relative_mass: "15.99491461957",
              abundance: Some("0.99757"),
            ),
            17: Isotope(
              relative_mass: "16.99913175650",
              abundance: Some("0.00038"),
            ),
            18: Isotope(
              relative_mass: "17.99915961286",
              abundance: Some("0.00205"),
            ),
          },
        ), 2),
      ],
      particle_offset: None,
    ),
    functional_groups: [
      FunctionalGroup(
        name: "Amino",
        location: "N-terminal",
      ),
      FunctionalGroup(
        name: "Amino",
        location: "Sidechain",
      ),
      FunctionalGroup(
        name: "Carboxyl",
        location: "C-terminal",
      ),
    ],
  ),
}
